--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,11 +1,10 @@
 name: Shell Commands
 
-on:
-  push:
+on: [push]
 
 jobs:
   run-shell-command:
-    runs-on: ubuntu-lasted
+    runs-on: ubuntu-latest
     steps:
       - name: echo a string
         run: echo "Hello World"
