--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -1,10 +1,15 @@
+# Define o nome do Fluxo de trabalho
 name: Shell Commands
 
+# Informa o tipo de evento que gerará a execução do Worflow
 on: [push]
 
+# Objeto usado para declarar o job
 jobs:
   run-shell-command:
+    # Define o tipo de VM que executará os jobs
     runs-on: ubuntu-latest
+    # Define as etapas do job
     steps:
       - name: echo a string
         run: echo "Hello World"
@@ -12,3 +17,8 @@ jobs:
         run: |
           node -v
           npm -v
+      - name: python command
+        run: |
+          import platform
+          print(platform.processor())
+        shell: python
