--- a/.github/workflows/simple.yml
+++ b/.github/workflows/simple.yml
@@ -22,3 +22,11 @@ jobs:
           import platform
           print(platform.processor())
         shell: python
+  run-windows-commands:
+    run-on: windows-latest
+      steps:
+        - name: Directory PowerShell
+          run: Get-Location
+        - name: Directory Bash
+          run: pwd
+          shell: bash
